fixed visibility menu extended

--- a/src/js/components/MenuList/theme/default.css
+++ b/src/js/components/MenuList/theme/default.css
@@ -63,7 +63,7 @@
     transition-duration: 0.3s;
     transition-timing-function: ease-in-out;
     width: 230px;
-    z-index: 1000;
+    z-index: 8110;
     position: absolute;
     right: 24px;
 }
@@ -84,7 +84,7 @@
     color: #00C1E2;
     position: absolute;
     margin-right: 34px;
-    z-index: 1002;
+    z-index: 8112;
     box-shadow: 0px 0px 30px #000;
     font-weight: bold;
     font-size: 45px;
